# inmobify-services

./: .gitignore  Cargo.toml  build-services.sh  dc-appointments.yml  dc-auth.yml  dc-fileserver.yml  dc-payments.yml  dc-properties.yml  dc-users.yml  docker-compose.yml
.github/: prod.yml
.github/workflows/: prod.yml
appointments/: Cargo.toml  Dockerfile
appointments/migrations/2025-05-17-191239_create_prospects/: down.sql  up.sql
appointments/migrations/2025-06-20-045916_transaction_types/: up.sql
appointments/migrations/2025-06-20-045924_transactions/: up.sql
appointments/src/: main.rs  routes.rs
appointments/src/dal/: db_operations.rs  mod.rs  repository.rs  sch_models.rs  schema.rs
appointments/src/dto/: check_prospect.rs  mod.rs  new_prospect.rs  new_transaction.rs  prospect_summary.rs
auth/: Cargo.toml  Dockerfile
auth/src/: main.rs  routes.rs
auth/src/dal/: db_operations.rs  repository.rs  sch_models.rs  schema.rs
auth/src/dto/: login.rs  login_response.rs  mod.rs
database_logger/: Cargo.toml  Dockerfile  build_error.txt  diesel.toml
database_logger/migrations/2025-03-05-234744_operations/: up.sql
database_logger/migrations/2025-03-05-234745_operation_logs/: down.sql  up.sql
database_logger/src/: main.rs  schema.rs
database_logger/src/dal/: db_operations.rs  repository.rs  sch_models.rs  schema.rs
database_logger/src/dto/: mod.rs  new_log.rs
file_server/: Cargo.toml  Dockerfile  move_images.sh
file_server/src/: main.rs  routes.rs
gateway/: Cargo.toml
gateway/src/: main.rs
jwt/: Cargo.toml
jwt/src/: lib.rs
payments/: Cargo.toml  Dockerfile
properties/: Cargo.toml  Dockerfile  diesel.toml
properties/migrations/2025-03-04-001342_create_property_statuses/: down.sql  up.sql
properties/migrations/2025-03-04-001423_create_property_types/: down.sql  up.sql
properties/src/: main.rs  routes.rs
properties/src/dal/: mod.rs  (+4 more)
properties/tests/: integration_tests.rs
users/: Cargo.toml  Dockerfile  diesel.toml
users/migrations/2025-02-16-153843_create_users/: up.sql
users/migrations/2025-02-16-155710_create_user_types/: down.sql  up.sql
users/migrations/2025-02-16-156053_create_users/: up.sql
users/src/: dto_models.rs  main.rs  routes.rs
users/src/dal/: db_operations.rs  mod.rs  repository.rs  sch_models.rs  schema.rs
users/src/dto/: mod.rs  new_user.rs  update_user.rs  user.rs
(+21 files in other folders)
