[package]
name = "database_logger"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = { workspace = true }
uuid = { version = "1.4", features = ["v4"]}
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono", "network-address", "ipnet-address"] }
ip_network = "0.4.1"
diesel_migrations = "*"
serde_json = "1.0"
actix-web = "4.0"
actix-cors = "0.7.0"
chrono = "*"
log = "0.4.25"
